Fixing the modal overlay was overlapping the windows scrollbar

--- a/client/js/components/Modal/modal.scss
+++ b/client/js/components/Modal/modal.scss
@@ -8,12 +8,6 @@
   bottom: 0;
   left: 0;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  padding: 35px;
-
   overflow: auto;
   transition: all 500ms;
   visibility: visible;
@@ -33,12 +27,22 @@
 }
 
 .modal__overlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   background-color: rgba(black, 0.7);
+  transition: inherit;
+}
+
+.modal__box-holder {
+  position: relative; // so the overlay knows how big it should be
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 35px;
+  transition: inherit;
 }
 
 .modal__box {
